src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail57.jova
class Main {

  public int main() {
    bool test;
    bool test2;
    int x;
    bool boolean;
    int integer;
    int value;
    String wort;

    x = a;
    return 0;
  }

}